electricity has gone, but i need some time

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 							<li class="sub"> <i class="fas fa-search"></i>
 								<form action="#" class="search"> <input type="search" placeholder="Search.."> </form>
 							</li>
-							<li> <i class="fas fa-cart-plus"></i> </li>
+							<li> <a href="#"><i class="fas fa-cart-plus"></i></a> </li>
 						</ul>
 					</nav>
 					</div>
@@ -97,154 +97,208 @@
 			============================== -->
 			<section id="popular">
 				<div class="container bg-white">
-					<div class="row">
+					<div class="row center">
 					<div class="col">
 						<div class="title">
-							<h3>Lates popular</h3>
+							<h3>Popular Collection</h3>
 						</div>
 					</div>
 					<!-- end title -->
-					<div class="col-3">
-						<article class="popular">
-							<div class="thumbnail">
-								<img src="img/courses/popular-1.png" alt="">
-							</div>
-							<div class="popular-content">
-								<h2>React - The Complete Guide For 2020</h2>
-								<p>Reed Krakoff.</p>
-							</div>
-							<div class="popular-extra">
-								<div class="star">
-								<i class="fa fa-star"></i>
-								<i class="fa fa-star"></i>
-								<i class="fa fa-star"></i>
-								<i class="fa fa-star"></i>
-								<i class="fal fa-star"></i>
-								<span>4.5</span>
+					<div class="products">
+						<div class="col-3">
+							<article class="product">
+								<div class="thumbnail">
+									<img src="img/tripod.png" alt="">
 								</div>
-								<div class="time">
-								<i class="far fa-clock"></i><span>1:30 hr</span>
+								<div class="popular-content">
+									<h2>Flex Tripod</h2>
+									<p class="price">$50.48</p>
 								</div>
-							</div>
-						</article>
-						<!-- end popular -->
-						<article class="popular">
-							<div class="thumbnail">
-								<img src="img/courses/popular-2.png" alt="">
-							</div>
-							<div class="popular-content">
-								<h2>Powerpoint 2020 Master Powerpoint Cour</h2>
-								<p>Walter Scott</p>
-							</div>
-							<div class="popular-extra">
-								<div class="star">
-								<i class="fa fa-star"></i>
-								<i class="fa fa-star"></i>
-								<i class="fa fa-star"></i>
-								<i class="fa fa-star"></i>
-								<i class="fal fa-star"></i>
-								<span>4.5</span>
+								<div class="rating">
+									<div class="star">
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fal fa-star"></i>
+									<span>4.9</span>
+									</div>
 								</div>
-								<div class="time">
-								<i class="far fa-clock"></i><span>1:20 hr</span>
+								<p>Wordwide shifting available Buyers protection possible!</p>
+							</article>
+							<!-- end aricle -->
+							<article class="product">
+								<div class="thumbnail">
+									<img src="img/mic.png" alt="">
 								</div>
-							</div>
-						</article>
-						<!-- end popular -->
-						<article class="popular">
-							<div class="thumbnail">
-								<img src="img/courses/popular-3.png" alt="">
-							</div>
-							<div class="popular-content">
-								<h2>The Complete JavaScript popular 2020</h2>
-								<p>Reed Krakoff.</p>
-							</div>
-							<div class="popular-extra">
-								<div class="star">
-								<i class="fa fa-star"></i>
-								<i class="fa fa-star"></i>
-								<i class="fa fa-star"></i>
-								<i class="fa fa-star"></i>
-								<i class="fal fa-star"></i>
-								<span>4.5</span>
+								<div class="popular-content">
+									<h2>Microphone</h2>
+									<p class="price">$120.25</p>
 								</div>
-								<div class="time">
-								<i class="far fa-clock"></i><span>1:10 hr</span>
+								<div class="rating">
+									<div class="star">
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fal fa-star"></i>
+									<span>4.9</span>
+									</div>
 								</div>
-							</div>
-						</article>
-						<!-- end popular -->
-						<article class="popular">
-							<div class="thumbnail">
-								<img src="img/courses/popular-4.png" alt="">
-							</div>
-							<div class="popular-content">
-								<h2>The Complete A-Z Laravel popular 2020</h2>
-								<p>Reed Krakoff</p>
-							</div>
-							<div class="popular-extra">
-								<div class="star">
-								<i class="fa fa-star"></i>
-								<i class="fa fa-star"></i>
-								<i class="fa fa-star"></i>
-								<i class="fa fa-star"></i>
-								<i class="fal fa-star"></i>
-								<span>4.5</span>
+								<p>Wordwide shifting available Buyers protection possible!</p>
+							</article>
+							<!-- end aricle -->
+							<article class="product">
+								<div class="thumbnail">
+									<img src="img/airpod.png" alt="">
 								</div>
-								<div class="time">
-								<i class="far fa-clock"></i><span>1:00 hr</span>
+								<div class="popular-content">
+									<h2>Airbuds</h2>
+									<p class="price">$100.00</p>
 								</div>
-							</div>
-						</article>
-						<!-- end popular -->
-						<article class="popular">
-							<div class="thumbnail">
-								<img src="img/courses/popular-5.png" alt="">
-							</div>
-							<div class="popular-content">
-								<h2>Its Complete Codeignitor popular 2020</h2>
-								<p>John Doe</p>
-							</div>
-							<div class="popular-extra">
-								<div class="star">
-								<i class="fa fa-star"></i>
-								<i class="fa fa-star"></i>
-								<i class="fa fa-star"></i>
-								<i class="fa fa-star"></i>
-								<i class="fal fa-star"></i>
-								<span>4.5</span>
+								<div class="rating">
+									<div class="star">
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fal fa-star"></i>
+									<span>4.9</span>
+									</div>
 								</div>
-								<div class="time">
-								<i class="far fa-clock"></i><span>1:50 hr</span>
+								<p>Wordwide shifting available Buyers protection possible!</p>
+							</article>
+							<!-- end aricle -->
+							<article class="product">
+								<div class="thumbnail">
+									<img src="img/setup.png" alt="">
 								</div>
-							</div>
-						</article>
-						<!-- end popular -->
-						<article class="popular">
-							<div class="thumbnail">
-								<img src="img/courses/popular-6.png" alt="">
-							</div>
-							<div class="popular-content">
-								<h2>The Complete Flutter App Development popular 2020</h2>
-								<p>Uwe Werner</p>
-							</div>
-							<div class="popular-extra">
-								<div class="star">
-								<i class="fa fa-star"></i>
-								<i class="fa fa-star"></i>
-								<i class="fa fa-star"></i>
-								<i class="fa fa-star"></i>
-								<i class="fal fa-star"></i>
-								<span>4.5</span>
+								<div class="popular-content">
+									<h2>Photoshoot Sets</h2>
+									<p class="price">$820.50</p>
 								</div>
-								<div class="time">
-								<i class="far fa-clock"></i><span>1:40 hr</span>
+								<div class="rating">
+									<div class="star">
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fal fa-star"></i>
+									<span>4.9</span>
+									</div>
 								</div>
-							</div>
-						</article>
-						<!-- end popular -->
+								<p>Wordwide shifting available Buyers protection possible!</p>
+							</article>
+							<!-- end aricle -->
+							<article class="product">
+								<div class="thumbnail">
+									<img src="img/drone.png" alt="">
+								</div>
+								<div class="popular-content">
+									<h2>Drone</h2>
+									<p class="price">$980.25</p>
+								</div>
+								<div class="rating">
+									<div class="star">
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fal fa-star"></i>
+									<span>4.9</span>
+									</div>
+								</div>
+								<p>Wordwide shifting available Buyers protection possible!</p>
+							</article>
+							<!-- end aricle -->
+							<article class="product">
+								<div class="thumbnail">
+									<img src="img/lights.png" alt="">
+								</div>
+								<div class="popular-content">
+									<h2>Light Setup</h2>
+									<p class="price">$1200.75</p>
+								</div>
+								<div class="rating">
+									<div class="star">
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fal fa-star"></i>
+									<span>4.9</span>
+									</div>
+								</div>
+								<p>Wordwide shifting available Buyers protection possible!</p>
+							</article>
+							<!-- end aricle -->
+							<article class="product">
+								<div class="thumbnail">
+									<img src="img/camera.png" alt="">
+								</div>
+								<div class="popular-content">
+									<h2>Vloggin Camera</h2>
+									<p class="price">$1880.25</p>
+								</div>
+								<div class="rating">
+									<div class="star">
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fal fa-star"></i>
+									<span>4.9</span>
+									</div>
+								</div>
+								<p>Wordwide shifting available Buyers protection possible!</p>
+							</article>
+							<!-- end aricle -->
+							<article class="product">
+								<div class="thumbnail">
+									<img src="img/single-light.png" alt="">
+								</div>
+								<div class="popular-content">
+									<h2>Green Screen</h2>
+									<p class="price">$25.99</p>
+								</div>
+								<div class="rating">
+									<div class="star">
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fal fa-star"></i>
+									<span>4.9</span>
+									</div>
+								</div>
+								<p>Wordwide shifting available Buyers protection possible!</p>
+							</article>
+							<!-- end aricle -->
+							<article class="product">
+								<div class="thumbnail">
+									<img src="img/action.png" alt="">
+								</div>
+								<div class="popular-content">
+									<h2>Action Camera</h2>
+									<p class="price">$120.25</p>
+								</div>
+								<div class="rating">
+									<div class="star">
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fal fa-star"></i>
+									<span>4.9</span>
+									</div>
+								</div>
+								<p>Wordwide shifting available Buyers protection possible!</p>
+							</article>
+							<!-- end aricle -->
+							
+						</div>
+						<!-- end col -->
 					</div>
-					<!-- end col -->
 					</div>
 				</div>
 			</section>
