--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 							<div class="footer">
 								<h3>Influencer products</h3>
 								<p>Copyright &copy; 2020 influencer products</p>
-								<p>All rights reserved</p>
+								<p class="copywright">All rights reserved</p>
 								<ul class="social-menu">
 									<li> <a href="" target="_blank"> <i class="fab fa-facebook"></i> </a> </li>
 									<li> <a href="" target="_blank"> <i class="fab fa-twitter"></i> </a> </li>
