--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
 			</section>
 			<!-- End Banner  -->
 
-
 			<!-- =============================
 				Brand Seciton
 			============================== -->
@@ -98,207 +97,233 @@
 			<section id="popular">
 				<div class="container bg-white">
 					<div class="row center">
-					<div class="col">
 						<div class="title">
 							<h3>Popular Collection</h3>
 						</div>
-					</div>
-					<!-- end title -->
-					<div class="products">
-						<div class="col-3">
-							<article class="product">
-								<div class="thumbnail">
-									<img src="img/tripod.png" alt="">
-								</div>
-								<div class="popular-content">
-									<h2>Flex Tripod</h2>
-									<p class="price">$50.48</p>
-								</div>
-								<div class="rating">
-									<div class="star">
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fal fa-star"></i>
-									<span>4.9</span>
+						<!-- end title -->
+						<div class="products">
+							<div class="col-3">
+								<article class="product">
+									<div class="thumbnail">
+										<img src="img/tripod.png" alt="">
 									</div>
-								</div>
-								<p>Wordwide shifting available Buyers protection possible!</p>
-							</article>
-							<!-- end aricle -->
-							<article class="product">
-								<div class="thumbnail">
-									<img src="img/mic.png" alt="">
-								</div>
-								<div class="popular-content">
-									<h2>Microphone</h2>
-									<p class="price">$120.25</p>
-								</div>
-								<div class="rating">
-									<div class="star">
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fal fa-star"></i>
-									<span>4.9</span>
+									<div class="popular-content">
+										<h2>Flex Tripod</h2>
+										<p class="price">$50.48</p>
 									</div>
-								</div>
-								<p>Wordwide shifting available Buyers protection possible!</p>
-							</article>
-							<!-- end aricle -->
-							<article class="product">
-								<div class="thumbnail">
-									<img src="img/airpod.png" alt="">
-								</div>
-								<div class="popular-content">
-									<h2>Airbuds</h2>
-									<p class="price">$100.00</p>
-								</div>
-								<div class="rating">
-									<div class="star">
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fal fa-star"></i>
-									<span>4.9</span>
+									<div class="rating">
+										<div class="star">
+										<i class="fa fa-star"></i>
+										<i class="fa fa-star"></i>
+										<i class="fa fa-star"></i>
+										<i class="fa fa-star"></i>
+										<i class="fal fa-star"></i>
+										<span>4.9</span>
+										</div>
 									</div>
-								</div>
-								<p>Wordwide shifting available Buyers protection possible!</p>
-							</article>
-							<!-- end aricle -->
-							<article class="product">
-								<div class="thumbnail">
-									<img src="img/setup.png" alt="">
-								</div>
-								<div class="popular-content">
-									<h2>Photoshoot Sets</h2>
-									<p class="price">$820.50</p>
-								</div>
-								<div class="rating">
-									<div class="star">
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fal fa-star"></i>
-									<span>4.9</span>
+									<p>Wordwide shifting available Buyers protection possible!</p>
+								</article>
+								<!-- end aricle -->
+								<article class="product">
+									<div class="thumbnail">
+										<img src="img/mic.png" alt="">
 									</div>
-								</div>
-								<p>Wordwide shifting available Buyers protection possible!</p>
-							</article>
-							<!-- end aricle -->
-							<article class="product">
-								<div class="thumbnail">
-									<img src="img/drone.png" alt="">
-								</div>
-								<div class="popular-content">
-									<h2>Drone</h2>
-									<p class="price">$980.25</p>
-								</div>
-								<div class="rating">
-									<div class="star">
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fal fa-star"></i>
-									<span>4.9</span>
+									<div class="popular-content">
+										<h2>Microphone</h2>
+										<p class="price">$120.25</p>
 									</div>
-								</div>
-								<p>Wordwide shifting available Buyers protection possible!</p>
-							</article>
-							<!-- end aricle -->
-							<article class="product">
-								<div class="thumbnail">
-									<img src="img/lights.png" alt="">
-								</div>
-								<div class="popular-content">
-									<h2>Light Setup</h2>
-									<p class="price">$1200.75</p>
-								</div>
-								<div class="rating">
-									<div class="star">
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fal fa-star"></i>
-									<span>4.9</span>
+									<div class="rating">
+										<div class="star">
+										<i class="fa fa-star"></i>
+										<i class="fa fa-star"></i>
+										<i class="fa fa-star"></i>
+										<i class="fa fa-star"></i>
+										<i class="fal fa-star"></i>
+										<span>4.9</span>
+										</div>
 									</div>
-								</div>
-								<p>Wordwide shifting available Buyers protection possible!</p>
-							</article>
-							<!-- end aricle -->
-							<article class="product">
-								<div class="thumbnail">
-									<img src="img/camera.png" alt="">
-								</div>
-								<div class="popular-content">
-									<h2>Vloggin Camera</h2>
-									<p class="price">$1880.25</p>
-								</div>
-								<div class="rating">
-									<div class="star">
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fal fa-star"></i>
-									<span>4.9</span>
+									<p>Wordwide shifting available Buyers protection possible!</p>
+								</article>
+								<!-- end aricle -->
+								<article class="product">
+									<div class="thumbnail">
+										<img src="img/airpod.png" alt="">
 									</div>
-								</div>
-								<p>Wordwide shifting available Buyers protection possible!</p>
-							</article>
-							<!-- end aricle -->
-							<article class="product">
-								<div class="thumbnail">
-									<img src="img/single-light.png" alt="">
-								</div>
-								<div class="popular-content">
-									<h2>Green Screen</h2>
-									<p class="price">$25.99</p>
-								</div>
-								<div class="rating">
-									<div class="star">
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fal fa-star"></i>
-									<span>4.9</span>
+									<div class="popular-content">
+										<h2>Airbuds</h2>
+										<p class="price">$100.00</p>
 									</div>
-								</div>
-								<p>Wordwide shifting available Buyers protection possible!</p>
-							</article>
-							<!-- end aricle -->
-							<article class="product">
-								<div class="thumbnail">
-									<img src="img/action.png" alt="">
-								</div>
-								<div class="popular-content">
-									<h2>Action Camera</h2>
-									<p class="price">$120.25</p>
-								</div>
-								<div class="rating">
-									<div class="star">
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fal fa-star"></i>
-									<span>4.9</span>
+									<div class="rating">
+										<div class="star">
+										<i class="fa fa-star"></i>
+										<i class="fa fa-star"></i>
+										<i class="fa fa-star"></i>
+										<i class="fa fa-star"></i>
+										<i class="fal fa-star"></i>
+										<span>4.9</span>
+										</div>
 									</div>
-								</div>
-								<p>Wordwide shifting available Buyers protection possible!</p>
-							</article>
-							<!-- end aricle -->
-							
+									<p>Wordwide shifting available Buyers protection possible!</p>
+								</article>
+								<!-- end aricle -->
+								<article class="product">
+									<div class="thumbnail">
+										<img src="img/setup.png" alt="">
+									</div>
+									<div class="popular-content">
+										<h2>Photoshoot Sets</h2>
+										<p class="price">$820.50</p>
+									</div>
+									<div class="rating">
+										<div class="star">
+										<i class="fa fa-star"></i>
+										<i class="fa fa-star"></i>
+										<i class="fa fa-star"></i>
+										<i class="fa fa-star"></i>
+										<i class="fal fa-star"></i>
+										<span>4.9</span>
+										</div>
+									</div>
+									<p>Wordwide shifting available Buyers protection possible!</p>
+								</article>
+								<!-- end aricle -->
+								<article class="product">
+									<div class="thumbnail">
+										<img src="img/drone.png" alt="">
+									</div>
+									<div class="popular-content">
+										<h2>Drone</h2>
+										<p class="price">$980.25</p>
+									</div>
+									<div class="rating">
+										<div class="star">
+										<i class="fa fa-star"></i>
+										<i class="fa fa-star"></i>
+										<i class="fa fa-star"></i>
+										<i class="fa fa-star"></i>
+										<i class="fal fa-star"></i>
+										<span>4.9</span>
+										</div>
+									</div>
+									<p>Wordwide shifting available Buyers protection possible!</p>
+								</article>
+								<!-- end aricle -->
+								<article class="product">
+									<div class="thumbnail">
+										<img src="img/lights.png" alt="">
+									</div>
+									<div class="popular-content">
+										<h2>Light Setup</h2>
+										<p class="price">$1200.75</p>
+									</div>
+									<div class="rating">
+										<div class="star">
+										<i class="fa fa-star"></i>
+										<i class="fa fa-star"></i>
+										<i class="fa fa-star"></i>
+										<i class="fa fa-star"></i>
+										<i class="fal fa-star"></i>
+										<span>4.9</span>
+										</div>
+									</div>
+									<p>Wordwide shifting available Buyers protection possible!</p>
+								</article>
+								<!-- end aricle -->
+								<article class="product">
+									<div class="thumbnail">
+										<img src="img/camera.png" alt="">
+									</div>
+									<div class="popular-content">
+										<h2>Vloggin Camera</h2>
+										<p class="price">$1880.25</p>
+									</div>
+									<div class="rating">
+										<div class="star">
+										<i class="fa fa-star"></i>
+										<i class="fa fa-star"></i>
+										<i class="fa fa-star"></i>
+										<i class="fa fa-star"></i>
+										<i class="fal fa-star"></i>
+										<span>4.9</span>
+										</div>
+									</div>
+									<p>Wordwide shifting available Buyers protection possible!</p>
+								</article>
+								<!-- end aricle -->
+								<article class="product">
+									<div class="thumbnail">
+										<img src="img/single-light.png" alt="">
+									</div>
+									<div class="popular-content">
+										<h2>Green Screen</h2>
+										<p class="price">$25.99</p>
+									</div>
+									<div class="rating">
+										<div class="star">
+										<i class="fa fa-star"></i>
+										<i class="fa fa-star"></i>
+										<i class="fa fa-star"></i>
+										<i class="fa fa-star"></i>
+										<i class="fal fa-star"></i>
+										<span>4.9</span>
+										</div>
+									</div>
+									<p>Wordwide shifting available Buyers protection possible!</p>
+								</article>
+								<!-- end aricle -->
+								<article class="product">
+									<div class="thumbnail">
+										<img src="img/action.png" alt="">
+									</div>
+									<div class="popular-content">
+										<h2>Action Camera</h2>
+										<p class="price">$120.25</p>
+									</div>
+									<div class="rating">
+										<div class="star">
+										<i class="fa fa-star"></i>
+										<i class="fa fa-star"></i>
+										<i class="fa fa-star"></i>
+										<i class="fa fa-star"></i>
+										<i class="fal fa-star"></i>
+										<span>4.9</span>
+										</div>
+									</div>
+									<p>Wordwide shifting available Buyers protection possible!</p>
+								</article>
+								<!-- end aricle -->
+								
+							</div>
+							<!-- end col -->
 						</div>
-						<!-- end col -->
 					</div>
+				</div>
+			</section>
+			<!-- End Popular Product -->
+
+			<section id="contact">
+				<div class="container">
+					<div class="row center">
+						<div class="title">
+							<h2>Get In Touch</h2>
+						</div>
+						<div class="contact">
+							<div class="col-2">
+								<div class="message">
+									<form action="#">
+										<div class="form-group">
+										<input type="text" name="name" placeholder="Name">
+										<input type="email" name="email" placeholder="Email">
+									</div>
+									<textarea name="message" cols="80" rows="10">Message</textarea>
+									<button type="submit" class="btn">Submit</button>
+									</form>
+								</div>
+								<div class="subscribe">
+
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
