--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Influencer Gears | Assignment-02</title>
+    <title>Influencer | Assignment-02</title>
 	<link rel="icon" href="img/logos/Ebay.svg" sizes="60x60">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="css/style.css">
@@ -22,7 +22,7 @@
                 <a class="bars"> <i class="fas fa-bars"></i> </a>
                 <h2>
                   <a href="index.html">
-                    <!--<img src="img/icons/logo.png" alt="">--> Influencer products 
+                    <!--<img src="img/icons/logo.png" alt="">--> Influencer
                   </a>
                 </h2>
                 <i class="fal fa-cart-plus"></i>
@@ -368,8 +368,8 @@
           <div class="row center">
             <div class="col">
               <div class="footer">
-                <h3>Influencer products</h3>
-                <p>Copyright &copy; 2020 influencer products</p>
+                <h3>Influencer Photographer</h3>
+                <p>Copyright &copy; 2020 influencer</p>
                 <p class="copywright">All rights reserved</p>
                 <ul class="social-menu">
                   <li> <a href="" target="_blank"> <i class="fab fa-facebook"></i> </a> </li>
