--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="banner-content">
                   <h1>Explore The World With Me</h1>
                   <p>Hi!, I'm Hasan. A professional adventure photographer, blogger and digital content maker. Join with me to watch the world staying at home</p>
-                  <a href="#" class="btn btn-buy">Preebook now <i class="fas fa-arrow-right"></i> </a>
+                  <a href="#" class="btn btn-buy"> Preebook now <i class="fas fa-arrow-right"></i> </a>
                 </div>
                 <!-- end banner content -->
                 <div class="banner-img">
@@ -80,13 +80,13 @@
             <div class="brand">
               <div class="col">
                 <ul class="brand-logo">
-                  <li> <a href="#"> <img src="img/logos/Alibaba.svg" alt=""> </a> </li>
-                  <li> <a href="#"> <img src="img/logos/Amazon.svg" alt=""> </a> </li>
-                  <li> <a href="#"> <img src="img/logos/Daraz.pk Logo.svg" alt=""> </a> </li>
-                  <li> <a href="#"> <img src="img/logos/Ebay.svg" alt=""> </a> </li>
-                  <li> <a href="#"> <img src="img/logos/Rakuten.svg" alt=""> </a> </li>
-                  <li> <a href="#"> <img src="img/logos/Target.svg" alt=""> </a> </li>
-                  <li> <a href="#"> <img src="img/logos/Walmart.svg" alt=""> </a> </li>
+                  <li> <a href="#"> <img src="img/logos/Alibaba.svg" alt="" class="scale"> </a> </li>
+                  <li> <a href="#"> <img src="img/logos/Amazon.svg" alt="" class="scale"> </a> </li>
+                  <li> <a href="#"> <img src="img/logos/Daraz.pk Logo.svg" alt="" class="scale"> </a> </li>
+                  <li> <a href="#"> <img src="img/logos/Ebay.svg" alt="" class="scale"> </a> </li>
+                  <li> <a href="#"> <img src="img/logos/Rakuten.svg" alt="" class="scale"> </a> </li>
+                  <li> <a href="#"> <img src="img/logos/Target.svg" alt="" class="scale"> </a> </li>
+                  <li> <a href="#"> <img src="img/logos/Walmart.svg" alt="" class="scale"> </a> </li>
                 </ul>
               </div>
             </div>
@@ -107,7 +107,7 @@
               <div class="col-3">
                 <article class="product">
                   <div class="thumbnail">
-                    <img src="img/tripod.png" alt="">
+                    <img src="img/tripod.png" alt="" class="scale">
                   </div>
                   <div class="popular-content">
                     <h2>Flex Tripod</h2>
@@ -130,7 +130,7 @@
                 <!-- end aricle -->
                 <article class="product">
                   <div class="thumbnail">
-                    <img src="img/mic.png" alt="">
+                    <img src="img/mic.png" alt="" class="scale">
                   </div>
                   <div class="popular-content">
                     <h2>Microphone</h2>
@@ -153,7 +153,7 @@
                 <!-- end aricle -->
                 <article class="product">
                   <div class="thumbnail">
-                    <img src="img/airpod.png" alt="">
+                    <img src="img/airpod.png" alt="" class="scale">
                   </div>
                   <div class="popular-content">
                     <h2>Airbuds</h2>
@@ -176,7 +176,7 @@
                 <!-- end aricle -->
                 <article class="product">
                   <div class="thumbnail">
-                    <img src="img/setup.png" alt="">
+                    <img src="img/setup.png" alt="" class="scale">
                   </div>
                   <div class="popular-content">
                     <h2>Photoshoot Sets</h2>
@@ -199,7 +199,7 @@
                 <!-- end aricle -->
                 <article class="product">
                   <div class="thumbnail">
-                    <img src="img/drone.png" alt="">
+                    <img src="img/drone.png" alt="" class="scale">
                   </div>
                   <div class="popular-content">
                     <h2>Drone</h2>
@@ -222,7 +222,7 @@
                 <!-- end aricle -->
                 <article class="product">
                   <div class="thumbnail">
-                    <img src="img/lights.png" alt="">
+                    <img src="img/lights.png" alt="" class="scale">
                   </div>
                   <div class="popular-content">
                     <h2>Light Setup</h2>
@@ -245,7 +245,7 @@
                 <!-- end aricle -->
                 <article class="product">
                   <div class="thumbnail">
-                    <img src="img/camera.png" alt="">
+                    <img src="img/camera.png" alt="" class="scale">
                   </div>
                   <div class="popular-content">
                     <h2>Vloggin Camera</h2>
@@ -268,7 +268,7 @@
                 <!-- end aricle -->
                 <article class="product">
                   <div class="thumbnail">
-                    <img src="img/single-light.png" alt="">
+                    <img src="img/single-light.png" alt="" class="scale">
                   </div>
                   <div class="popular-content">
                     <h2>Green Screen</h2>
@@ -291,7 +291,7 @@
                 <!-- end aricle -->
                 <article class="product">
                   <div class="thumbnail">
-                    <img src="img/action.png" alt="">
+                    <img src="img/action.png" alt="" class="scale">
                   </div>
                   <div class="popular-content">
                     <h2>Action Camera</h2>
@@ -347,11 +347,11 @@
                 <div class="message">
                   <form action="#">
                     <div class="form-group">
-                      <input type="text" name="name" placeholder="Name">
-                      <input type="email" name="email" placeholder="Email">
+                      <input type="text" name="name" placeholder="Name" required>
+                      <input type="email" name="email" placeholder="Email" required>
                     </div>
                     <textarea name="message">Message</textarea>
-                    <p><input type="checkbox"> <span>I accept terms & condition</span></p>
+                    <p><input type="checkbox" required> <span>I accept terms & condition</span></p>
                     <button type="submit" class="btn submit">Submit</button>
                   </form>
                 </div>
@@ -372,10 +372,11 @@
                 <p>Copyright &copy; 2020 influencer</p>
                 <p class="copywright">All rights reserved</p>
                 <ul class="social-menu">
-                  <li> <a href="" target="_blank"> <i class="fab fa-facebook"></i> </a> </li>
-                  <li> <a href="" target="_blank"> <i class="fab fa-twitter"></i> </a> </li>
-                  <li> <a href="" target="_blank"> <i class="fab fa-whatsapp"></i> </a> </li>
-                  <li> <a href="" target="_blank"> <i class="fab fa-instagram"></i> </a> </li>
+                  <li> <a href="" target="_blank"> <i class="fab fa-facebook scale"></i> </a> </li>
+                  <li> <a href="" target="_blank"> <i class="fab fa-twitter scale"></i> </a> </li>
+                  <li> <a href="" target="_blank"> <i class="fab fa-whatsapp scale"></i> </a> </li>
+                  <li> <a href="" target="_blank"> <i class="fab fa-instagram scale"></i> </a> </li>
+                  <li> <a href="" target="_blank"> <i class="fab fa-youtube scale"></i> </a> </li>
                 </ul>
               </div>
             </div>
